--- a/index.html
+++ b/index.html
@@ -9,73 +9,79 @@
     </head>
     <body>
       <div class="container">
+        <div class="row heading">
+          <i class="far fa-eye icon"></i>
+          <h2 class="headerView">Viewings</h2>
+        </div><!--End of Row-->
+        <br>
         <br>
         <div class="row">
-          <div class="col-4 info info-person">
-            <img src="images/image1.jpg" class="img-thumbnail img-fluid">
-            <div class="overlay">
-              <h2>Sarah McCarthy</h2>
-              <p>Super User</p>
-              <p class="icons">
-                <a href="#>"<i class="fas fa-envelope"></i></a>
-              </p>
-            </div>
-          </div>
-          <div class="col-4 info info-person">
-            <img src="images/image2.jpg" class="img-thumbnail img-fluid">
-            <div class="overlay">
-              <h2>David Bewley</h2>
-              <p>Super User</p>
-              <p class="icons">
-                <a href="#>"<i class="fas fa-envelope"></i></a>
-              </p>
-            </div>
-          </div>
-          <div class="col-4 info info-person">
-            <img src="images/image3.jpg" class="img-thumbnail img-fluid">
-            <div class="overlay">
-              <h2>Ciaran Cassidy</h2>
-              <p>Director</p>
-              <p class="icons">
-                <a href="#>"<i class="fas fa-envelope"></i></a>
-              </p>
-            </div>
-          </div>
-        </div><!--end of row-->
-        <br>
-        <div class="row">
-          <div class="col-4 info info-person">
-            <img src="images/image4.jpg" class="img-thumbnail img-fluid">
-            <div class="overlay">
-              <h2>Jane Corley</h2>
-              <p>Administrator</p>
-              <p class="icons">
-                <a href="#>"<i class="fas fa-envelope"></i></a>
-              </p>
-            </div>
-          </div>
-          <div class="col-4 info info-person">
-            <img src="images/image5.jpg" class="img-thumbnail img-fluid">
-            <div class="overlay">
-              <h2>David Byrne</h2>
-              <p>Super User</p>
-              <p class="icons">
-                <a href="#>"<i class="fas fa-envelope"></i></a>
-              </p>
-            </div>
-          </div>
-          <div class="col-4 info info-person">
-            <img src="images/image6.jpg" class="img-thumbnail img-fluid">
-            <div class="overlay">
-              <h2>Sean Tate</h2>
-              <p>Super User</p>
-              <p class="icons">
-                <a href="#>"<i class="fas fa-envelope"></i></a>
-              </p>
-            </div>
-          </div>
-        </div><!--end of row-->
+          <table class=" table table-borderless">
+            <thead>
+              <tr>
+                <th>Date</th>
+                <th>Time</th>
+                <th>Property</th>
+                <th>Status</th>
+                <th></th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td><p class="month">October</p> <p class="day">13</p></td>
+                <td>12:00</td>
+                <td>Wilton Manor, Foxrock, Dublin 18</td>
+                <td class="open">Viewing Open</td>
+                <td><button type="button">Cancel</button></td>
+              </tr>
+              <tr>
+                <td><p class="month">October</p> <p class="day">13</p></td>
+                <td>13:00</td>
+                <td>10 Callary Road, Mount Merrion, County Dublin</td>
+                <td class="open">Viewing Open</td>
+                <td><button type="button">Cancel</button></td>
+              </tr>
+              <tr>
+                <td><p class="month">October</p> <p class="day">20</p></td>
+                <td>12:00</td>
+                <td>32 Ailesbury Road, Dublin 4</td>
+                <td class="open">Viewing Open</td>
+                <td><button type="button">Cancel</button></td>
+              </tr>
+              <tr>
+                <td><p class="month">October</p> <p class="day">27</p></td>
+                <td>08:00</td>
+                <td>10 Callary Road, Mount Merrion, County Dublin</td>
+                <td class="pending">Private Viewing Pending</td>
+                <td></td>
+              </tr>
+              <tr>
+                <td><p class="month">November</p> <p class="day">17</p></td>
+                <td>10:00</td>
+                <td>Meadowview, Balheary, Swords, Co.Dublin</td>
+                <td class="decline">Private Viewing Declined</td>
+                <td></td>
+              </tr>
+              <tr>
+                <td><p class="month">November</p> <p class="day">17</p></td>
+                <td>16:30</td>
+                <td>Meadowview, Balheary, Swords, Co.Dublin</td>
+                <td class="decline">Private Viewing Declined</td>
+                <td></td>
+              </tr>
+              <tr>
+                <td><p class="month">November</p> <p class="day">24</p></td>
+                <td>13:00</td>
+                <td>Blackwood House, Castleknock, Co.Dublin</td>
+                <td class="open">Viewing Open</td>
+                <td><button type="button">Cancel</button></td>
+              </tr>
+            </tbody>
+          </table>
 
+
+
+        </div>
 
 
 
